--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   .combo{position:fixed;left:50%;top:56px;transform:translateX(-50%);font-weight:900;font-size:20px;pointer-events:none;text-shadow:0 2px 8px rgba(0,0,0,.5);opacity:.95}
   .levelBanner{position:fixed;left:50%;top:40%;transform:translate(-50%,-50%) scale(.6);font-size:26px;font-weight:900;letter-spacing:.5px;background:rgba(0,0,0,.35);padding:10px 14px;border:1px solid #2a2f3a;border-radius:12px;opacity:0;transition:.28s}
   .tip{position:fixed;left:12px;bottom:12px;font-size:12px;opacity:.85}
-  .overlay{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.35);visibility:hidden;opacity:0;transition:.2s}
+  .overlay{position:fixed; inset:0; display:flex; align-items:center; justify-content:center;background:rgba(0,0,0,.35); visibility:hidden; opacity:0; transition:.2s;z-index:9999; /* 保证封面在最上层 */}
   .show{visibility:visible;opacity:1}
   .card{position:relative;background:#151a22;border:1px solid #2a2f3a;padding:18px 20px;border-radius:16px;text-align:center;max-width:92vw;color:#dfe7ff}
   .btn{display:inline-block;margin-top:10px;padding:10px 16px;border-radius:10px;border:1px solid #2a2f3a;background:#18202b;cursor:pointer;user-select:none}
@@ -32,9 +32,16 @@
   .hint{position:fixed;right:12px;bottom:64px;background:rgba(0,0,0,.55);border:1px solid #2a2f3a;border-radius:10px;padding:8px 10px;font-size:12px;opacity:.95}
   .mission{position:fixed;left:50%;bottom:54px;transform:translateX(-50%);background:rgba(0,0,0,.55);border:1px solid #2a2f3a;border-radius:10px;padding:6px 10px;font-size:12px;opacity:.95}
 
-  /* v8.4: 封面全屏 Banner 背景层 */
-  #coverBg{position:fixed;inset:0;background:#0b0f17 center/cover no-repeat;z-index:-1;opacity:.9}
-  #overlay.show #coverBg{opacity:1}
+  /* v8.4: 封面 Banner（使用你的 GitHub 图片直链） */
+(function(){
+  const bg = document.getElementById('coverBg');
+  const BANNER_SRC = 'https://github.com/lear19910209-collab/dino-fruits/blob/main/834B9316-38B9-4A3D-869F-AA0B02492248.png?raw=true';
+  const img = new Image();
+  img.onload  = () => { bg.style.backgroundImage = `url('${BANNER_SRC}')`; };
+  img.onerror = () => { bg.style.background = 'radial-gradient(1200px 700px at 50% -100px,#1a2030,#0f1115)'; };
+  img.src = BANNER_/* 封面全屏 Banner 背景层 */
+#coverBg{position:fixed;inset:0;background:#0b0f17 center/cover no-repeat;z-index:-1;opacity:.9}
+#overlay.show #coverBg{opacity:1}
 </style>
 </head>
 <body>
