--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   .combo{position:fixed;left:50%;top:56px;transform:translateX(-50%);font-weight:900;font-size:20px;pointer-events:none;text-shadow:0 2px 8px rgba(0,0,0,.5);opacity:.95}
   .levelBanner{position:fixed;left:50%;top:40%;transform:translate(-50%,-50%) scale(.6);font-size:26px;font-weight:900;letter-spacing:.5px;background:rgba(0,0,0,.35);padding:10px 14px;border:1px solid #2a2f3a;border-radius:12px;opacity:0;transition:.28s}
   .tip{position:fixed;left:12px;bottom:12px;font-size:12px;opacity:.85}
-  .overlay{position:fixed; inset:0; display:flex; align-items:center; justify-content:center;background:rgba(0,0,0,.35); visibility:hidden; opacity:0; transition:.2s;z-index:9999; /* 保证封面在最上层 */}
-  .show{visibility:visible;opacity:1}
+  .overlay{position:fixed; inset:0; display:flex; align-items:center; justify-content:center;background:rgba(0,0,0,.35); visibility:hidden; opacity:0; transition:.2s; z-index:9999;}
+  .show{visibility:visible; opacity:1}/* 封面背景层 */
+  #coverBg{position:fixed; inset:0; background:#0b0f17 center/cover no-repeat; z-index:-1; opacity:.9}
+  #overlay.show #coverBg{opacity:1}
   .card{position:relative;background:#151a22;border:1px solid #2a2f3a;padding:18px 20px;border-radius:16px;text-align:center;max-width:92vw;color:#dfe7ff}
   .btn{display:inline-block;margin-top:10px;padding:10px 16px;border-radius:10px;border:1px solid #2a2f3a;background:#18202b;cursor:pointer;user-select:none}
   .small{opacity:.8;font-size:13px;margin-top:6px}
