--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
   <div class="wrap"><canvas id="game" width="520" height="820"></canvas></div>
 
   <!-- 封面 / 排行榜 / 设置 / 成就 -->
-  <div id="overlay" class="overlay">
+  <div id="overlay" class="overlay show">
+  <div id="coverBg" aria-hidden="true"></div>  <!-- 这行很关键！ -->
+  <!-- 下面紧跟菜单卡片 menuCard / 排行榜 / 设置 ... -->
     <!-- v8.4: 全屏Banner层 -->
     <div id="coverBg" aria-hidden="true"></div>
 
