--- a/index.html
+++ b/index.html
@@ -207,6 +207,39 @@
       <div style="margin-top:8px"><button class="btn" id="achClose">关闭</button></div>
     </div>
   </div>
+/* ===== 封面 UI美化（仅影响菜单卡片） ===== */
+
+/* 背景更偏右，露出恐龙；手机上稍微上移一点构图 */
+#coverBg{background-position: 70% 60% !important; /* 桌面：多展示右侧恐龙 */}
+@media (max-width: 768px){#coverBg{ background-position: 60% 45% !important; }}
+
+/* 让菜单卡片靠底居中，玻璃态，不挡画面主体 */
+#menuCard{align-self: flex-end;                         /* 仅菜单卡片靠底，其它面板不受影响 */
+  margin: 0 auto clamp(56px, 12vh, 120px) auto; /* 底部留白：自适应 */
+  max-width: min(88vw, 520px);
+  background: rgba(14,18,26,0.55);
+  border: 1px solid rgba(255,255,255,0.12);
+  box-shadow: 0 20px 60px rgba(0,0,0,0.45);
+  backdrop-filter: blur(10px) saturate(120%);
+  -webkit-backdrop-filter: blur(10px) saturate(120%);
+  text-align: center;
+  animation: menuPop .35s ease-out both;}
+@keyframes menuPop{from{ transform: translateY(14px); opacity:0; }
+  to{ transform: translateY(0); opacity:1; }}
+
+/* 标题与行距微调，整体更紧凑 */
+#menuCard h1{ margin:4px 0 8px; font-size: 30px; letter-spacing:.3px; }
+#menuCard .small{ opacity:.85; line-height:1.5; }
+
+/* 按钮视觉升级：主行动更明显 */
+#menuCard .btn{ padding: 12px 18px; border-radius: 12px; }
+#start{background: linear-gradient(180deg,#3ea6ff,#1976ff);
+  color:#fff; border:0; font-weight:800; letter-spacing:.5px;
+  box-shadow: 0 6px 18px rgba(25,118,255,.35);}
+#start:active{ transform: translateY(1px); }
+
+/* 在小屏上稍缩卡片，避免再遮挡恐龙脚部 */
+@media (max-width:420px){#menuCard{ margin-bottom: 9vh; max-width: 92vw; }}
 
 <script>
 /* ================ Settings ================ */
