--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   // 应用为背景
   const url = cv.toDataURL('image/png');
   bg.style.backgroundImage = `url('${url}')`;})(); 
+  <head>
 <style>
   /* ===== 封面 UI美化（仅影响菜单卡片） ===== */
 
