--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   .show{visibility:visible; opacity:1}/* 封面背景层 */
   #coverBg{position:fixed; inset:0; background:#0b0f17 center/cover no-repeat; z-index:-1; opacity:.9}
   #overlay.show #coverBg{opacity:1}
+  #coverImg{position: fixed; inset: 0;width: 100%; height: 100%;object-fit: cover;object-position: 70% 60%;z-index: 0; pointer-events: none; user-select: none;}
+  .overlay .veil{ position:fixed; inset:0; background:rgba(0,0,0,.35); z-index:1; pointer-events:none; }
+  #menuCard, #lbCard, #settingsCard, #achCard{ position:relative; z-index:2; }
+  @media (max-width:768px){ #coverImg{ object-position: 60% 45%; } }
   .card{position:relative;background:#151a22;border:1px solid #2a2f3a;padding:18px 20px;border-radius:16px;text-align:center;max-width:92vw;color:#dfe7ff}
   .btn{display:inline-block;margin-top:10px;padding:10px 16px;border-radius:10px;border:1px solid #2a2f3a;background:#18202b;cursor:pointer;user-select:none}
   .small{opacity:.8;font-size:13px;margin-top:6px}
@@ -212,16 +216,6 @@
 @media (max-width: 768px){
   #coverImg{ object-position: 60% 45%; }
 }
-#coverImg{
-  position: fixed; inset: 0;
-  width: 100%; height: 100%;
-  object-fit: cover;
-  object-position: 70% 60%;
-  z-index: 0; pointer-events: none; user-select: none;
-}
-.overlay .veil{ position:fixed; inset:0; background:rgba(0,0,0,.35); z-index:1; pointer-events:none; }
-#menuCard, #lbCard, #settingsCard, #achCard{ position:relative; z-index:2; }
-@media (max-width:768px){ #coverImg{ object-position: 60% 45%; } }
 </style>
 </head>
 <body>
